--- a/src/template.html
+++ b/src/template.html
@@ -44,4 +44,4 @@
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 	</body>
-</html></link>
+</html>
